# renderer

./: .gitignore  CMakeLists.txt  basic_frag.glsl  basic_vert.glsl  cube.h  debug.c  debug.h  gl.c  gl.h  main.c  sdl.c  sdl.h  shader.c  shader.h  texture.c  texture.h  util.c  util.h
